--- a/stylesheet.css
+++ b/stylesheet.css
@@ -209,7 +209,13 @@ h2 {
   /* padding-top: 20px; */
   margin: 0;
   font-family: "Lato", Verdana, Helvetica, sans-serif;
-  font-size: 32px;
+  font-size: 1.5rem;
+  margin-right: 0;
+  margin-right: 0;
+  /* border-color: green;
+  border-style: solid;
+  border-width: 0.1rem; */
+  text-align: right;
 }
 
 .one {
@@ -267,15 +273,15 @@ span.highlight {
 .hello-container {
   margin-top: 0;
   display: flex; /* Corrected from 'display' to 'position' */
-  height: 90px;
+  height: 2.75rem;
   margin-left: 0;
   padding-top: 0;
   padding-bottom: 0;
-  margin-bottom: 0;
+  margin-bottom: 0.25rem;
 }
 
 .hello-container h1 {
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: bold;
   transition: 300ms ease;
 
@@ -287,15 +293,15 @@ span.highlight {
 
 .hello-container h2 {
   color: white;
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: bold;
   transition: 300ms ease;
 }
 
 .paragraph,
 .paragraph-a {
-  line-height: 1.15rem;
-  font-size: 0.8rem;
+  line-height: 1.125rem;
+  font-size: 0.85rem;
 }
 
 #geometric_thumbnail {
@@ -380,12 +386,12 @@ span.highlight {
 
 /* Specific styles for list items */
 .update_text {
-  font-size: 0.8rem;
+  font-size: 0.85rem;
   margin-bottom: 0.1rem; /* Add spacing between items */
 }
 
 /* Specific styles for dates */
 .update_date {
   font-weight: 700; /* Bold for emphasis */
-  font-size: 0.8rem; /* Slightly larger font size */
+  font-size: 0.85rem; /* Slightly larger font size */
 }
