--- a/stylesheet.css
+++ b/stylesheet.css
@@ -218,7 +218,7 @@ h2 {
   text-align: right;
 }
 
-/* For cell phone screens, adjust height */
+/* For cell phone screens, adjust height for name*/
 @media (max-width: 600px) {
   .name {
     height: 1rem; /* Smaller height for cell phones */
