--- a/stylesheet.css
+++ b/stylesheet.css
@@ -206,30 +206,31 @@ h2 {
   font-style: oblique;
 }
 .name {
-  /* padding-top: 20px; */
   margin: 0;
   font-family: "Lato", Verdana, Helvetica, sans-serif;
   font-size: 1.25rem;
-  margin-right: 0;
-  margin-right: 0;
-  /* border-color: green;
-  border-style: solid;
-  border-width: 0.1rem; */
   text-align: right;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
 }
 
-/* For cell phone screens, adjust height for name*/
+.name-text {
+  white-space: normal;
+}
+
+.link {
+  white-space: nowrap;
+}
+
+/* Adjust font size for smaller screens */
 @media (max-width: 600px) {
   .name {
-    margin: 0;
-    font-family: "Lato", Verdana, Helvetica, sans-serif;
-    font-size: 1.1rem;
-    margin-right: 0;
-    margin-right: 0;
-    /* border-color: green;
-    border-style: solid;
-    border-width: 0.1rem; */
-    text-align: right;
+    font-size: 1.1rem; /* Reduce font size for smaller screens */
+  }
+
+  .name-text {
+    white-space: normal; /* Ensure text wraps on small screens */
   }
 }
 
