--- a/stylesheet.css
+++ b/stylesheet.css
@@ -152,7 +152,65 @@ h2 {
   height: 100%;
   justify-content: center;
   align-items: center;
+
+  cursor: pointer;
+  /* display: flex; Ensure it behaves as a flexbox */
 }
+
+.publication-imagebox img {
+  width: 95%;
+  transition: transform 0.3s ease; /* Smooth transition for image */
+  display: block; /* remove the padding around image*/
+}
+
+.publication-imagebox img:hover {
+  transform: scale(1.05); /* Slightly zoom on hover */
+}
+.image-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* Black see-through */
+  z-index: 1000; /* Ensure overlay is on top of other content */
+  justify-content: center;
+  align-items: center;
+  cursor: pointer; /* cursor change to indicate click*/
+  overflow: none; /* make the overlay scrollable*/
+}
+
+.image-overlay.active {
+  display: flex;
+}
+
+.zoomed-image-container {
+  max-width: 50%; /* Ensure image doesn't get too big*/
+  max-height: 50%; /* Ensure image doesn't get too big*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed; /* Container for the zoomed image */
+}
+
+.zoomed-image {
+  max-width: 80%; /* Ensure image doesn't get too big*/
+  max-height: 80%; /* Ensure image doesn't get too big*/
+  display: block; /* remove the padding around image*/
+  object-fit: contain; /* so the whole image is contained*/
+  border-radius: 10px; /*Rounded border for zoomed image*/
+  transition: transform 0.3s ease, max-width 0.3s ease, max-height 0.3s ease; /* Smooth animation */
+}
+
+/* Media query for smaller screens */
+@media (max-width: 600px) {
+  .zoomed-image-container {
+    max-width: 95%; /* Ensure image doesn't get too big on smaller screens*/
+    max-height: 95%; /* Ensure image doesn't get too big on smaller screens*/
+  }
+}
+
 .publication-contentbox {
   padding: var(--padding-base);
   width: 70%;
