--- a/stylesheet.css
+++ b/stylesheet.css
@@ -221,9 +221,11 @@ h2 {
   font-family: "Lato", Verdana, Helvetica, sans-serif;
   font-size: var(--publication-title-size);
   font-weight: 900;
-  line-height: 1.25;
+  line-height: 1.15;
   color: black;
   display: block;
+  margin-top: 0.25rem;
+  padding-top: 0;
 }
 
 .publication-title:hover {
@@ -291,6 +293,8 @@ h2 {
   color: var(--text-color);
   font-size: var(--publication-abstract-size);
   font-style: oblique;
+  margin-bottom: 0.25rem;
+  padding-bottom: 0;
 }
 
 .name-text {
@@ -367,13 +371,6 @@ span.highlight {
   padding-top: 0;
   padding-bottom: 0;
   margin-bottom: 0.5rem;
-}
-
-/* For cell phone screens, adjust height */
-@media (max-width: 600px) {
-  .hello-container {
-    height: 2rem;
-  }
 }
 
 .hello-container h1 {
@@ -510,7 +507,10 @@ span.highlight {
 /* Explicitly set a smaller profile image size for larger screens */
 .profile-image-container img {
   width: 100%;
-  border-radius: 10rem;
+  max-width: 100%;
+  border-radius: 50%;
+  vertical-align: middle;
+
   /* max-width: 100px; Keep it within a max size */
 }
 
@@ -551,12 +551,6 @@ span.highlight {
   vertical-align: middle;
 }
 
-.profile-image-container {
-  padding: 2.5%;
-  width: 40%;
-  max-width: 40%;
-}
-
 .publication-table {
   width: 100%;
   border: 0px;
@@ -585,6 +579,23 @@ span.highlight {
 
 /* Media query for smaller screens */
 @media (max-width: 600px) {
+  .hello-container {
+    height: 2rem;
+    margin-left: 0; /* remove default margin*/
+    display: flex; /* makes it a flex container */
+  }
+  .hello-container h1 {
+    /* change here */
+    justify-content: flex-start; /* aligns content to left */
+    margin-left: 0; /*remove the margin from the h1*/
+  }
+
+  .profile-td {
+    padding: 2.5%;
+    width: 90%;
+    vertical-align: left;
+  }
+
   .inner-table > tbody > tr {
     display: flex;
     flex-direction: column;
@@ -607,6 +618,7 @@ span.highlight {
     justify-content: right;
     align-items: center;
     margin: 1rem auto;
+    vertical-align: middle;
   }
 
   .large-screen-profile-image {
@@ -614,7 +626,8 @@ span.highlight {
   }
   .small-screen-profile-image {
     display: block;
-    /* order: 1; */
+    order: 1;
+    display: flex;
   }
 
   .profile-image-container img {
@@ -622,13 +635,8 @@ span.highlight {
     max-width: 100%;
     object-fit: cover;
     border-radius: 1%;
+    display: block;
   }
-
-  .profile-td {
-    width: 100%;
-    padding: 1rem 0;
-  }
-
   .name {
     font-size: var(--small-name-size);
     text-align: center;
@@ -643,7 +651,8 @@ span.highlight {
 
   .publication-title {
     order: 1;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.25rem;
+    margin-top: 0.25rem;
   }
   .publication-authors-wrapper {
     order: 2;
