--- a/stylesheet.css
+++ b/stylesheet.css
@@ -591,7 +591,7 @@ span.highlight {
   }
 
   .profile-td {
-    padding: 2.5%;
+    /* padding: 2.5%; */
     width: 90%;
     vertical-align: left;
   }
@@ -617,8 +617,8 @@ span.highlight {
     display: flex;
     justify-content: right;
     align-items: center;
-    margin: 1rem auto;
     vertical-align: middle;
+    margin-top: 0;
   }
 
   .large-screen-profile-image {
@@ -636,6 +636,8 @@ span.highlight {
     object-fit: cover;
     border-radius: 1%;
     display: block;
+    margin-top: 0;
+    padding-top: 0;
   }
   .name {
     font-size: var(--small-name-size);
